# Unnamed-factory

./: .gitignore  Cargo.toml  LICENSE  notes.md
assets/buildings/: bighouse.bconf  church.bconf  house.bconf  magetower.bconf  smallhouse.bconf  watchtower.bconf
assets/buildings/test/: test.bconf  test.gltf
assets/img/: terrain.xcf
assets/materials/: map.mapmat
assets/parts/belt/: belt.glb  belt.ron
assets/parts/miner/: miner.glb  miner.ron
assets/parts/smelter/: smelter.glb  smelter.ron
assets/scripts/: init.rhai  run.rhai
assets/shaders/: build_material.wgsl  extended_material.wgsl  map_material.wgsl
src/: build.rs  build_asset.rs  main.rs  map.rs  mapgen.rs  maptext.rs  parts.rs  shaders.rs  sim.rs  ui.rs
