[package]
name = "unnamed-factory"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16", features = ["bevy_remote"]}
ron = "0.9"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
kdtree-collisions = {path = "../kdtree-collisions"}

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
