[package]
name = "unnamed-factory"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16", features = ["bevy_remote", "trace_tracy", "file_watcher"]}
ron = "0.9"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
kdtree-collisions = {path = "../kdtree-collisions"}
noiz = "0.1"
rand = "0.9"
rhai = {version="1.21", features = ["sync", "metadata", "no_closure", "no_custom_syntax", "no_time", "only_i64"]}
foldhash = "*"
# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
